--- a/Introdução a criação de websites com HTML5 e CSS3/style.css
+++ b/Introdução a criação de websites com HTML5 e CSS3/style.css
@@ -31,10 +31,18 @@ section{
 }
 
 .post_title{
-    margin: 10px;;
+    margin-bottom: 5px;
+    margin: 0;
 }
 
 .post{
+    border-radius: 5px;
     background-color: #7B68EE;
     padding: 10px;;
+    border: 3px solid #8A2BE2;
+    margin: 0;
+}
+
+ul{
+    list-style-type: "\1F44D";
 }
