--- a/Introdução ao JavaScript/projeto3/assets/css/styles.css
+++ b/Introdução ao JavaScript/projeto3/assets/css/styles.css
@@ -1,29 +1,14 @@
 body{
     background-color: black;
-    color: grey;
-    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-family: 'Courier New', Courier, monospace
 }
 
 button{
+    background-color: green;
     color: white;
     font-size: medium;
     border-radius: 30px;
-}
-
-.subtrair{
-    margin-right: 15px;
-    align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: red;
-}
-
-.adicionar{
-    margin-left: 15px;
-    align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: green;
 }
 
 span{
@@ -33,48 +18,16 @@ span{
     padding-right: 10px;
 }
 
-.sub{
-    color: black;
-    margin-left: 15px;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: yellow;
+
+footer{
+    margin-top: 28%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    background-color: red;
 }
 
-.soma{
-    color: black;
-    margin-left: 15px;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: yellow;
-}
-
-.mult{
-    color: black;
-    margin-left: 15px;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: yellow;
-}
-
-.divide{
-    color: black;
-    margin-left: 15px;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: yellow;
-}
-
-.operacao span{
-    margin-left: 50px;
-}
-
-#result{
-    margin: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
+a{
+    margin-left: 10px;
+    color: white;
 }
