--- a/Projeto1/style/style.css
+++ b/Projeto1/style/style.css
@@ -33,7 +33,6 @@ header .logo{
 }
 
 header nav a{
-
     text-decoration: none;
     font-size: 15px;
     color: #DCDCDC;
@@ -48,7 +47,7 @@ header nav a:hover{
 
 .pagina-principal{
     font-size: 20px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("../img/Fortinite.jpg");
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("../img/principal/Fortinite.jpg");
     height: 460px;
     background-size: cover;
 
@@ -66,6 +65,11 @@ header nav a:hover{
     margin-top: 15%;
     font-size: 70px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.pagina-principal .container{
+    width: 70%;
+    padding: 3%;
 }
 
 .botao{
@@ -89,4 +93,25 @@ header nav a:hover{
 
 .botao I{
     margin: 5px;
+}
+
+.owl-carousel{
+    margin: 1% 0.5%;
+}
+
+.box-miniaturas{
+    height: 100%;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+.subtitulo{
+    margin-top: 15px;
+    margin-left: 5px;
+}
+
+.owl-carousel .item{
+    height: 300px;
+    width: 240px;
 }
